--- a/comment.html
+++ b/comment.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	  <title>Lashes by Ericka - Comment</title>
-    <!<meta name="description" content="Flattering eyelashes with semi permanet fibers that are glued to your natural lashes to make them appear longer, thicker and darker.">
+	  <title>Lashes by Ericka - Contact Us</title>
+    <!<meta name="description" content="A section where our clients can leave their personal details and a comment about their favourite service">
 
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
@@ -14,13 +14,13 @@
   <body style="padding-top: 70px">
   	<!-- body code goes here -->
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#"><img src="images/Logo/Logo82x80 copy.jpg" width="92" height="90" alt=""/></a>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#"><img src="images/logo.jpg" width="92" height="90" alt=""/></a>
       
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> 
         <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent1">  
         <ul class="navbar-nav mr-auto">   
-          <li class="nav-item"> <a class="nav-link" href="index.html">About Us</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="services.html">Our Services</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="aftercare.html">After Care</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="faqs.html">FAQs</a> </li>
@@ -49,19 +49,19 @@
 		  <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
       </ol>
 	    <div class="carousel-inner" role="listbox">
-	      <div class="carousel-item active"> <img src="images/Carousel Text1.jpg" width="1920" height="600" alt=""/>
+	      <div class="carousel-item active"> <img src="images/CarouselText1.jpg" alt="Image1 Beauty Eyelashes by Ericka"/>
 <div class="carousel-caption">
            </div>
           </div>
-	      <div class="carousel-item"> <img src="images/Carousel Text2.jpg" width="1920" height="600" alt=""/>
+	      <div class="carousel-item"> <img src="images/CarouselText2.jpg" alt="Image2 Enhancing Beauty"/>
 <div class="carousel-caption">
             </div>
           </div>
-	      <div class="carousel-item"> <img src="images/Carousel Text3.jpg" width="3840" height="1200" alt=""/>
+	      <div class="carousel-item"> <img src="images/CarouselText3.jpg" alt="Image3 Get your perfect lash look today"/>
 <div class="carousel-caption">
             </div>
           </div>
-      <div class="carousel-item"> <img src="images/Carousel Text4.jpg" width="1200" height="375" alt=""/>
+      <div class="carousel-item"> <img src="images/CarouselText4.jpg" alt="Image4 Book your appointment online"/>
 <div class="carousel-caption">
         </div>
           </div>
