--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	      <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
       </ol>
 	    <div class="carousel-inner" role="listbox">
-	      <div class="carousel-item active"> <img class="d-block mx-auto" src="images/lashes1.jpg" alt="First slide">
+	      <div class="carousel-item active"> <img class="d-block mx-auto" src="images/lashes1.png" alt="First slide">
 	        <div class="carousel-caption">
 	          <h6>EYES THAT SPEAK VOLUMES</h6>
 	          <p>We make your lashes speak for you...</p>
